--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,23 +1,100 @@
 
+@import url(//fonts.googleapis.com/css?family=Crimson+Text:400,700,400italic,700italic);
+@import url(//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic);
+
+
 @mixin hide {
   display: none;
   visibility: hidden;
 }
 
-/*======= variables ============*/
-$font-title: 'Crimson Text', serif;
-$font-base: 'Open Sans', "Lucida Grande", Arial, Helvetica, sans-serif;
-$color-base: #2c2c2c;
-$color-highlight: #7b2222;
-
-/*======= Reset ============*/
-* {
-  margin: 0;
-  padding: 0;
+@mixin show {
+  display: block;
+  visibility: visible;
 }
 
-img, fieldset {
+@mixin border-radius( $radius ) {
+  -webkit-border-radius: $radius;
+  -moz-border-radius: $radius;
+  border-radius: $radius;
+}
+@mixin  opacity($opacity: 0.5) {
+  -moz-opacity: $opacity;
+  -khtml-opacity: $opacity;
+  -webkit-opacity: $opacity;
+  opacity: $opacity;
+  $opperc: $opacity * 100;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=${opperc})";
+  filter: "alpha(opacity=${opperc})";
+}
+@mixin user-select($argument: none) {
+  -webkit-user-select: $argument;
+  -moz-user-select: $argument;
+  -ms-user-select: $argument;
+  user-select: $argument;
+}
+
+@mixin gradient($top, $bottom){
+  background: $top;
+  background: -moz-linear-gradient(top,  $top 0%, $bottom 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$top), color-stop(100%,$bottom));
+  background: -webkit-linear-gradient(top,  $top 0%,$bottom 100%);
+  background: -o-linear-gradient(top,  $top 0%,$bottom 100%);
+  background: -ms-linear-gradient(top,  $top 0%,$bottom 100%);
+  background: linear-gradient(to bottom,  $top 0%,$bottom 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
+}
+
+$font-title: 'Crimson Text', serif;
+$font-base: 'Open Sans', "Lucida Grande", Arial, Helvetica, sans-serif;
+$font-input: Georgia, "Times New Roman", Times, serif;
+
+$color-base: #2c2c2c;
+$color-text-home: #333333;
+$color-highlight: #7b2222;
+$color-link: #666666;
+$color-link-bg: #f7f7f7;
+$color-bg: #ffffff;
+$color-border: #dddddd;
+$color-input-bg: #ebebeb;
+
+/*
+ * Reset
+ *****************************************************************************/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
+blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em,
+img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u,
+i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table,
+caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details,
+embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby,
+section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
   border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+html {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+
+a img, fieldset {
+  border: none;
 }
 
 a {
@@ -28,24 +105,140 @@ a {
   }
 }
 
-ul {
-  list-style: none;
+article, aside, details, figcaption, figure, footer, header, hgroup, menu,
+nav, section, summary {
+  display: block;
 }
 
 
-/*======= styles ============*/
+/*
+ * Common Styles and Structure
+ *****************************************************************************/
 body {
+  padding-bottom: 35px;
   font: 14px $font-base;
   color: $color-base;
   background-image: url("images/body-bg.gif");
-  padding-bottom: 35px;
-  text-align: center;
 }
 
-/*========header==========*/
+#wrap {
+  position: relative;
+  left: 0;
+  top:0px;
+  z-index: 99999;
+
+  #wrap-inner {
+    height: 100%;
+    z-index: 9999;
+  }
+}
+#slidingMenu {
+  display: block;
+  position: absolute;
+  overflow:scroll;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 0;
+  visibility: hidden;	/* to block user interaction on wp7 (z-index wont work) */
+  background-image: url("images/body-bg.gif");
+}
+
+#slidingMenuContent {
+  background: $color-bg;
+
+  ul {
+
+
+    li {
+      
+      border: 1px solid $color-border;
+
+      a {
+        padding: 10px;
+        display: block;
+      }
+    }
+  }
+}
+
+
+article p:last-child, div p:last-child {
+  padding-bottom: 0!important;
+}
+
+.container {
+  width: 962px;
+
+  h3 {
+    padding-bottom: 14px;
+    font-size: 20px;
+    line-height: 26px;
+    color: $color-link;
+    font-weight: normal;
+    text-transform: uppercase;
+    font-family: $font-title;
+  }
+}
+
+.page {
+  margin: 25px auto 0;
+}
+
+.inner {
+  width: 100%;
+  overflow: hidden;
+}
+
+.content-box {
+  padding: 27px 2% 27px;
+  border: 1px solid $color-border;
+  border-top: none;
+  background: url("images/content-box-bg.gif") top left repeat-x $color-bg;
+
+  p {
+    line-height: 22px;
+    padding-bottom: 22px;
+
+    strong {
+      color: $color-highlight;
+    }
+  }
+}
+
+.col-full {
+  width: 95.5%;
+}
+.col-main {
+  width: 589px;
+  float: left;
+}
+.col-aside {
+  float: right;
+  width: 270px;
+}
+.col-onethird {
+  float: left;
+  width: 32%;
+  margin-right: 2%;
+
+  .content-box {
+    padding-left: 6%;
+    padding-right: 6%;
+  }
+}
+.col-onethird:last-child {
+  margin-right: 0;
+}
+
+
+
+/*
+ * Header
+ *****************************************************************************/
 header {
   width: 100%;
-  background: #ffffff;
+  background: $color-bg;
 
   .inner {
     width: 974px;
@@ -53,17 +246,33 @@ header {
     margin: 0 auto;
     position: relative;
     text-align: left;
+    overflow: visible;
+  }
+
+  .show-menu-button {
+    display: block;
+    float: left;
+    width: 24px;
+    height: 22px;
+    margin-top: 30px;
+    margin-left: 11px;
+    background: url('images/icon-show-menu.png') no-repeat;
+    @include hide();
   }
 
   #logo {
     width: 236px;
     height: 40px;
     position: absolute;
-    left: 369px;
-    top: 29px;
+    left: 37.89%;
+    top: 39%;
   }
+
 }
 
+/*
+ * Navigation
+ *****************************************************************************/
 ul.nav {
   width: 930px;
   height: 34px;
@@ -80,7 +289,7 @@ ul.nav {
       padding-bottom: 15px;
       font-size: 16px;
       line-height: 19px;
-      color: #666666;
+      color: $color-link;
       text-transform: uppercase;
       font-family: $font-title;
     }
@@ -94,14 +303,16 @@ ul.nav {
       margin-right: 320px;
     }
 
-    /*-----sub-navigation-----*/
+    /*
+     * Sub Navigation
+     *************************************************************************/
     ul {
       display: none;
       width: 186px;
       padding: 23px 10px 11px;
-      border-bottom: 1px solid #dddddd;
+      border-bottom: 1px solid $color-border;
       border-top: none;
-      background: #ffffff url(images/sub-nav-bg.gif) no-repeat;
+      background: url("images/sub-nav-bg.gif") no-repeat $color-bg;
       overflow: hidden;
       position: absolute;
       left: -43px;
@@ -113,11 +324,11 @@ ul.nav {
       width: 100%;
       height: 32px;
       overflow: hidden;
-      border-bottom: 1px solid #dddddd;
+      border-bottom: 1px solid $color-border;
       margin-right: 0;
     }
     li.fstLi {
-      border-top: 1px solid #dddddd
+      border-top: 1px solid $color-border
     }
 
     li a,
@@ -126,7 +337,7 @@ ul.nav {
       padding-bottom: 0;
       font-size: 14px;
       line-height: 32px;
-      color: #666666;
+      color: $color-link;
       text-indent: 5px;
       text-transform: none;
       font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
@@ -142,7 +353,9 @@ ul.nav {
 }
 
 
-/*------- banner --------*/
+/*
+ * Banner
+ *****************************************************************************/
 section.banner {
   width: 100%;
 
@@ -153,13 +366,14 @@ section.banner {
 }
 
 
-/*------- home intro --------*/
-section.home-intro {
-  width: 962px;
+/*
+ * Home Intro
+ *****************************************************************************/
+.home-intro {
   padding: 20px 0 56px;
   margin: 0 auto;
   text-align: center;
-  background: url(images/home-intro-bg.png) no-repeat center bottom;
+  background: url("images/home-intro-bg.png") no-repeat center bottom;
 
   h2 {
     width: 100%;
@@ -177,7 +391,7 @@ section.home-intro {
     padding-bottom: 9px;
     font-size: 22px;
     line-height: 26px;
-    color: #333;
+    color: $color-text-home;
     font-family: $font-title;
 
     strong {
@@ -189,37 +403,23 @@ section.home-intro {
 }
 
 
-
-/*-----home-widget------*/
+/*
+ * Home Widget
+ *****************************************************************************/
 .home-widget {
-  width: 962px;
-  padding-bottom: 46px;
   margin: 25px auto 0;
-  text-align: left;
-  background: url(images/home-widget-bg-bottom.png) no-repeat center bottom;
 
-  .inner {
-    overflow: hidden;
-
-    h3 {
-      padding-bottom: 14px;
-      font-size: 20px;
-      line-height: 26px;
-      color: #666;
-      font-weight: normal;
-      text-transform: uppercase;
-      font-family: $font-title;
-    }
+  h3 {
+    padding-bottom: 14px;
+    font-size: 20px;
+    line-height: 26px;
+    color: $color-link;
+    font-weight: normal;
+    text-transform: uppercase;
+    font-family: $font-title;
   }
 
   .links {
-    float: left;
-    width: 273px;
-    padding: 27px 16px 0 21px;
-    margin-right: 19px;
-    border-left: 1px solid #dddddd;
-    border-right: 1px solid #dddddd;
-    background: url("images/story-bg.gif") top left repeat-x #ffffff;
 
     p {
       line-height: 22px;
@@ -227,29 +427,29 @@ section.home-intro {
     }
 
     ul {
-      width: 273px;
+      width: 100%;
       overflow: hidden;
-      border-top: 1px solid #DBDBDB;
+      border-top: 1px solid #ddd;
 
       li {
         width: 100%;
         float: left;
-        border-bottom: 1px solid #DBDBDB;
+        border-bottom: 1px solid #ddd;
 
         a {
           width: 100%;
           display: block;
           font-size: 14px;
           line-height: 35px;
-          color: #666;
+          color: $color-link;
           text-indent: 26px;
-          background: url(images/bullet.gif) no-repeat 6px 12px;
+          background: url("images/bullet.gif") no-repeat 6px 12px;
 
           &:hover {
             text-decoration: none;
             color: $color-highlight;
             background-position: 6px -75px;
-            background-color: #F7F7F7;
+            background-color: $color-link-bg;
           }
         }
       }
@@ -257,12 +457,6 @@ section.home-intro {
   }
 
   .about {
-    float: left;
-    width: 259px;
-    padding: 27px 20px 0;
-    border-left: 1px solid #dddddd;
-    border-right: 1px solid #dddddd;
-    background: url("images/story-bg.gif") top left repeat-x #ffffff;
 
     p {
       line-height: 22px;
@@ -277,14 +471,10 @@ section.home-intro {
 }
 
 
-/*-----contact----*/
+/*
+ * Contact
+ *****************************************************************************/
 .contact {
-  float: right;
-  width: 270px;
-  padding: 27px 19px 0 20px;
-  border-left: 1px solid #dddddd;
-  border-right: 1px solid #dddddd;
-  background: url("images/story-bg.gif") top left repeat-x #ffffff;
 
   p {
     line-height: 22px;
@@ -300,111 +490,53 @@ section.home-intro {
     input[type="email"],
     input[type="tel"],
     textarea {
-      width: 248px;
+      width: 91.8%;
       height: 36px;
-      padding: 0px 10px 0;
+      padding: 0 3.7% 0;
       margin-bottom: 5px;
       float: left;
-      border: 1px solid #DBDBDB;
+      border: 1px solid $color-border;
       font-size: 14px;
       line-height: 22px;
-      color: #666;
-      font-family: Georgia, "Times New Roman", Times, serif;
-      background: url(images/input-text-bg.gif) repeat-x;
+      color: $color-link;
+      font-family: $font-input;
+      background: url("images/input-text-bg.gif") repeat-x $color-input-bg;
     }
 
     textarea {
       height: 93px;
       resize: none;
       padding-top: 7px;
-      background: #EBEBEB url(images/input-textarea-bg.gif) repeat-x;
+      background: url("images/input-textarea-bg.gif") repeat-x $color-input-bg;
     }
 
     input[type="button"] {
-      width: 270px;
+      width: 100%;
       height: 38px;
+      text-indent: 10px;
+      font-family: $font-input;
+      font-weight: bold;
+      text-align: left;
+      color: $color-bg;
       border: 0;
-      text-indent: -1000px;
-      background: url("images/button-submit.gif");
+      @include gradient(#b00000, #7d2121);
     }
   }
 
   .notice {
-    width: 233px;
+    width: 86%;
+    min-height: 33px;
     padding-left: 37px;
     display: block;
     font-size: 11px;
     line-height: 17px;
-    background: url(images/lock.gif) no-repeat;
+    background: url("images/lock.gif") no-repeat;
   }
 }
 
-
-/*----- page -sidebar------*/
-.page {
-  h3 {
-    padding-bottom: 14px;
-    font-size: 20px;
-    line-height: 26px;
-    color: #666;
-    font-weight: normal;
-    text-transform: uppercase;
-    font-family: $font-title;
-  }
-}
-
-/*----- page ------*/
-.page {
-  width: 962px;
-  text-align: left;
-  margin: 33px auto 0;
-  padding-bottom: 26px;
-
-  .inner {
-    width: 100%;
-    overflow: hidden;
-  }
-
-  .story {
-    padding: 27px 2.08% 0;
-    border-left: 1px solid #dddddd;
-    border-right: 1px solid #dddddd;
-    background: url("images/story-bg.gif") top left repeat-x #ffffff;
-
-    p {
-      line-height: 22px;
-      padding-bottom: 22px;
-
-      strong {
-        color: $color-highlight;
-      }
-    }
-  }
-}
-
-/*-----layout-sidebar------*/
-.layout-sidebar {
-
-  background: url(images/layout-sidebar-bg-bottom.png) no-repeat center bottom;
-
-  .story {
-    width: 589px;
-    float: left;
-  }
-}
-
-/*-----layout-single------*/
-.layout-single {
-  background: url(images/layout-single-bg-bottom.png) no-repeat center bottom;
-
-  .story {
-    width: 95.73%;
-  }
-}
-
-
-
-/*-------footer--------*/
+/*
+ * Footer
+ *****************************************************************************/
 footer {
   width: 962px;
   padding: 29px 0;
@@ -412,12 +544,16 @@ footer {
   text-align: center;
   font-size: 13px;
   line-height: 24px;
-  color: #666;
-  background: url(images/footer-bg.gif) no-repeat center bottom;
+  color: $color-link;
+  background: url("images/footer-bg.gif") no-repeat center bottom;
 
   a {
-    color: #666666;
+    color: $color-link;
     padding: 0 3px
+  }
+
+  address {
+    font-style: normal;
   }
 
   ul {
@@ -429,3 +565,144 @@ footer {
     }
   }
 }
+
+
+/*
+ * Media Queries
+ *****************************************************************************/
+
+@media only screen and (min-width : 992px) {
+  header .show-menu-button {
+    @include hide();
+  }
+}
+
+@media only screen and (max-width : 991px) {
+  .container {
+    width: 97%;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
+  }
+
+  header {
+    .show-menu-button {
+      @include show();
+    }
+    .inner {
+      width: 100%;
+    }
+    .nav {
+      @include hide();
+    }
+  }
+
+  .home-intro {
+    width: 90%;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+
+@media only screen and (max-width : 800px) {
+  .home-intro {
+    background-image: url("images/home-intro-bg-800.png");
+  }
+}
+
+@media only screen and (max-width : 767px) {
+  .home-intro {
+    background-image: url("images/home-intro-bg-767.png");
+  }
+
+  .col-onethird {
+    width: 100%;
+    float: none;
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  header #logo {
+    left: 33%;
+  }
+}
+
+@media only screen and (max-width : 720px) {
+  header #logo {
+    left: 31%;
+  }
+}
+
+@media only screen and (max-width : 640px) {
+
+  .container {
+    width: 96%;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+  .content-box {
+    padding: 27px 3% 27px;
+  }
+  .col-full {
+    width: 93%;
+  }
+
+  .home-intro {
+    background-image: url("images/home-intro-bg-640.png");
+  }
+
+  header #logo {
+    left: 29%;
+  }
+}
+
+@media only screen and (max-width : 560px) {
+  header #logo {
+    left: 27%;
+  }
+}
+
+@media only screen and (max-width : 480px) {
+  .home-intro {
+    background-image: url("images/home-intro-bg-480.png");
+  }
+
+  header #logo {
+    left: 24%;
+  }
+}
+
+@media only screen and (max-width : 380px) {
+
+  .container {
+    width: 94%;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+  .content-box {
+    padding: 27px 4% 27px;
+  }
+  .col-full {
+    width: 91%;
+  }
+
+  header #logo {
+    left: 23%;
+  }
+
+  .home-intro {
+    background-image: url("images/home-intro-bg-380.png");
+  }
+
+}
+
+@media only screen and (max-width : 320px) {
+  header #logo {
+    left: 17%;
+  }
+}
+
+
+
