--- a/scss/base.scss
+++ b/scss/base.scss
@@ -2,18 +2,7 @@
 @import url(//fonts.googleapis.com/css?family=Crimson+Text:400,700,400italic,700italic);
 @import url(//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic);
 
-
-@mixin hide {
-  display: none;
-  visibility: hidden;
-}
-
-@mixin show {
-  display: block;
-  visibility: visible;
-}
-
-@mixin border-radius( $radius ) {
+@mixin border-radius($radius) {
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
   border-radius: $radius;
@@ -43,6 +32,13 @@
   background: -ms-linear-gradient(top,  $top 0%,$bottom 100%);
   background: linear-gradient(to bottom,  $top 0%,$bottom 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
+}
+
+@mixin transition($duration:0.5s, $ease:ease-out) {
+  -webkit-transition: all $duration $ease;
+  -moz-transition: all $duration $ease;
+  -o-transition: all $duration $ease;
+  transition: all $duration $ease;
 }
 
 $font-title: 'Crimson Text', serif;
@@ -121,6 +117,9 @@ body {
   background-image: url("images/body-bg.gif");
 }
 
+#sliding-menu-wrap {
+  overflow: hidden;
+}
 #wrap {
   position: relative;
   left: 0;
@@ -136,27 +135,48 @@ body {
   display: block;
   position: absolute;
   overflow:scroll;
-  width: 100%;
+  width: 99%;
   left: 0;
   top: 0;
   z-index: 0;
-  visibility: hidden;	/* to block user interaction on wp7 (z-index wont work) */
-  background-image: url("images/body-bg.gif");
+  visibility: hidden;
+  background: $color-link-bg;
+  border-right: 1px solid $color-border;
 }
 
 #slidingMenuContent {
-  background: $color-bg;
+  background: $color-link-bg;
 
   ul {
 
-
     li {
-      
-      border: 1px solid $color-border;
 
       a {
         padding: 10px;
         display: block;
+        color: $color-link;
+        border-bottom: 1px solid $color-border;
+
+        &:hover {
+          text-decoration: none;
+        }
+      }
+
+      &.opened {
+        background: url("images/menu-close.png") top right no-repeat;
+      }
+      &.closed {
+        background: url("images/menu-open.png") top right no-repeat;
+      }
+    }
+
+    ul {
+      background: $color-bg;
+      border-bottom: 1px solid $color-border;
+      display: none;
+      a {
+        padding: 5px 10px;
+        border: none!important;
       }
     }
   }
@@ -210,12 +230,22 @@ article p:last-child, div p:last-child {
   width: 95.5%;
 }
 .col-main {
-  width: 589px;
+  width: 640px;
   float: left;
+
+  .content-box {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
 }
 .col-aside {
   float: right;
-  width: 270px;
+  width: 310px;
+
+  .content-box {
+    padding-left: 6%;
+    padding-right: 6%;
+  }
 }
 .col-onethird {
   float: left;
@@ -257,7 +287,7 @@ header {
     margin-top: 30px;
     margin-left: 11px;
     background: url('images/icon-show-menu.png') no-repeat;
-    @include hide();
+    display: none;
   }
 
   #logo {
@@ -573,7 +603,7 @@ footer {
 
 @media only screen and (min-width : 992px) {
   header .show-menu-button {
-    @include hide();
+    display: none;
   }
 }
 
@@ -584,15 +614,19 @@ footer {
     padding-right: 1.5%;
   }
 
+  .col-main {
+    width: 66%;
+  }
+
   header {
     .show-menu-button {
-      @include show();
+      display: block;
     }
     .inner {
       width: 100%;
     }
     .nav {
-      @include hide();
+      display: none;
     }
   }
 
@@ -603,9 +637,55 @@ footer {
   }
 }
 
+@media only screen and (max-width : 960px) {
+  .col-main {
+    width: 65%;
+  }
+}
+
+@media only screen and (max-width : 940px) {
+  .col-main {
+    width: 64%;
+  }
+}
+
+@media only screen and (max-width : 910px) {
+  .col-main {
+    width: 63%;
+  }
+}
+
+@media only screen and (max-width : 880px) {
+  .col-main {
+    width: 61%;
+  }
+}
+
+@media only screen and (max-width : 850px) {
+  .col-main {
+    width: 60%;
+  }
+}
+
+@media only screen and (max-width : 820px) {
+  .col-main {
+    width: 59%;
+  }
+}
+
 @media only screen and (max-width : 800px) {
   .home-intro {
     background-image: url("images/home-intro-bg-800.png");
+  }
+
+  .col-main {
+    width: 58%;
+  }
+}
+
+@media only screen and (max-width : 780px) {
+  .col-main {
+    width: 57%;
   }
 }
 
@@ -623,15 +703,39 @@ footer {
       margin-bottom: 0;
     }
   }
+  .col-main {
+    width: 56%;
+  }
 
   header #logo {
     left: 33%;
   }
 }
 
+@media only screen and (max-width : 740px) {
+  .col-main {
+    width: 55%;
+  }
+}
+
 @media only screen and (max-width : 720px) {
   header #logo {
     left: 31%;
+  }
+
+  .col-main {
+    width: 100%;
+    float: none;
+    margin-bottom: 20px;
+  }
+  .col-aside {
+    width: 100%;
+    float: none;
+
+    .content-box {
+      padding-left: 3%;
+      padding-right: 3%;
+    }
   }
 }
 
