--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ body {
   background-image: url("images/body-bg.gif");
 }
 
+#sliding-menu-wrap {
+  overflow: hidden;
+}
+
 #wrap {
   position: relative;
   left: 0;
@@ -77,24 +81,41 @@ body {
   display: block;
   position: absolute;
   overflow: scroll;
-  width: 100%;
+  width: 99%;
   left: 0;
   top: 0;
   z-index: 0;
   visibility: hidden;
-  /* to block user interaction on wp7 (z-index wont work) */
-  background-image: url("images/body-bg.gif");
+  background: #f7f7f7;
+  border-right: 1px solid #dddddd;
 }
 
 #slidingMenuContent {
-  background: #ffffff;
-}
-#slidingMenuContent ul li {
-  border: 1px solid #dddddd;
+  background: #f7f7f7;
 }
 #slidingMenuContent ul li a {
   padding: 10px;
   display: block;
+  color: #666666;
+  border-bottom: 1px solid #dddddd;
+}
+#slidingMenuContent ul li a:hover {
+  text-decoration: none;
+}
+#slidingMenuContent ul li.opened {
+  background: url("images/menu-close.png") top right no-repeat;
+}
+#slidingMenuContent ul li.closed {
+  background: url("images/menu-open.png") top right no-repeat;
+}
+#slidingMenuContent ul ul {
+  background: #ffffff;
+  border-bottom: 1px solid #dddddd;
+  display: none;
+}
+#slidingMenuContent ul ul a {
+  padding: 5px 10px;
+  border: none !important;
 }
 
 article p:last-child, div p:last-child {
@@ -142,13 +163,21 @@ article p:last-child, div p:last-child {
 }
 
 .col-main {
-  width: 589px;
+  width: 640px;
   float: left;
+}
+.col-main .content-box {
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
 .col-aside {
   float: right;
-  width: 270px;
+  width: 310px;
+}
+.col-aside .content-box {
+  padding-left: 6%;
+  padding-right: 6%;
 }
 
 .col-onethird {
@@ -189,7 +218,6 @@ header .show-menu-button {
   margin-left: 11px;
   background: url("images/icon-show-menu.png") no-repeat;
   display: none;
-  visibility: hidden;
 }
 header #logo {
   width: 236px;
@@ -462,7 +490,6 @@ footer ul li {
 @media only screen and (min-width: 992px) {
   header .show-menu-button {
     display: none;
-    visibility: hidden;
   }
 }
 @media only screen and (max-width: 991px) {
@@ -472,16 +499,18 @@ footer ul li {
     padding-right: 1.5%;
   }
 
+  .col-main {
+    width: 66%;
+  }
+
   header .show-menu-button {
     display: block;
-    visibility: visible;
   }
   header .inner {
     width: 100%;
   }
   header .nav {
     display: none;
-    visibility: hidden;
   }
 
   .home-intro {
@@ -490,9 +519,48 @@ footer ul li {
     padding-right: 5%;
   }
 }
+@media only screen and (max-width: 960px) {
+  .col-main {
+    width: 65%;
+  }
+}
+@media only screen and (max-width: 940px) {
+  .col-main {
+    width: 64%;
+  }
+}
+@media only screen and (max-width: 910px) {
+  .col-main {
+    width: 63%;
+  }
+}
+@media only screen and (max-width: 880px) {
+  .col-main {
+    width: 61%;
+  }
+}
+@media only screen and (max-width: 850px) {
+  .col-main {
+    width: 60%;
+  }
+}
+@media only screen and (max-width: 820px) {
+  .col-main {
+    width: 59%;
+  }
+}
 @media only screen and (max-width: 800px) {
   .home-intro {
     background-image: url("images/home-intro-bg-800.png");
+  }
+
+  .col-main {
+    width: 58%;
+  }
+}
+@media only screen and (max-width: 780px) {
+  .col-main {
+    width: 57%;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -509,13 +577,37 @@ footer ul li {
     margin-bottom: 0;
   }
 
+  .col-main {
+    width: 56%;
+  }
+
   header #logo {
     left: 33%;
+  }
+}
+@media only screen and (max-width: 740px) {
+  .col-main {
+    width: 55%;
   }
 }
 @media only screen and (max-width: 720px) {
   header #logo {
     left: 31%;
+  }
+
+  .col-main {
+    width: 100%;
+    float: none;
+    margin-bottom: 20px;
+  }
+
+  .col-aside {
+    width: 100%;
+    float: none;
+  }
+  .col-aside .content-box {
+    padding-left: 3%;
+    padding-right: 3%;
   }
 }
 @media only screen and (max-width: 640px) {
