--- a/scss/base.scss
+++ b/scss/base.scss
@@ -386,7 +386,7 @@ ul.nav {
 /*
  * Banner
  *****************************************************************************/
-section.banner {
+.banner {
   width: 100%;
 
   img {
