--- a/style.css
+++ b/style.css
@@ -127,12 +127,12 @@ article p:last-child, div p:last-child {
 }
 .container h3 {
   padding-bottom: 14px;
-  font-size: 20px;
-  line-height: 26px;
   color: #666666;
+  font-size: 1.429em;
   font-weight: normal;
-  text-transform: uppercase;
   font-family: "Crimson Text", serif;
+  line-height: 26px;
+  text-transform: uppercase;
 }
 
 .page {
@@ -247,11 +247,11 @@ ul.nav li {
 ul.nav li a {
   float: left;
   padding-bottom: 15px;
-  font-size: 16px;
-  line-height: 19px;
   color: #666666;
-  text-transform: uppercase;
+  font-size: 1.143em;
   font-family: "Crimson Text", serif;
+  line-height: 19px;
+  text-transform: uppercase;
 }
 ul.nav li a:hover, ul.nav li.slct_nav a {
   color: #7b2222;
@@ -262,15 +262,15 @@ ul.nav li.nav2 {
 }
 ul.nav li ul {
   display: none;
+  position: absolute;
+  overflow: hidden;
   width: 186px;
+  top: 23px;
+  left: -43px;
   padding: 23px 10px 11px;
   border-bottom: 1px solid #dddddd;
   border-top: none;
   background: url("images/sub-nav-bg.gif") no-repeat #ffffff;
-  overflow: hidden;
-  position: absolute;
-  left: -43px;
-  top: 23px;
 }
 ul.nav li li, ul.nav li.selected li {
   width: 100%;
@@ -285,12 +285,12 @@ ul.nav li li:first-child {
 ul.nav li li a, ul.nav li.selected li a {
   width: 100%;
   padding-bottom: 0;
-  font-size: 14px;
-  line-height: 32px;
   color: #666666;
+  font-size: 1em;
+  font-family: "Open Sans", "Lucida Grande", Arial, Helvetica, sans-serif;
+  line-height: 32px;
   text-indent: 5px;
   text-transform: none;
-  font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
   background: none;
 }
 ul.nav li li a:hover, ul.nav li.selected li a:hover {
@@ -321,20 +321,20 @@ ul.nav li li a:hover, ul.nav li.selected li a:hover {
 .home-intro h2 {
   width: 100%;
   padding-bottom: 17px;
-  font-size: 33px;
-  line-height: 36px;
   color: #7b2222;
-  font-family: "Crimson Text", serif;
+  font-size: 2.357em;
   font-style: italic;
   font-weight: normal;
+  font-family: "Crimson Text", serif;
+  line-height: 36px;
 }
 .home-intro p {
   width: 100%;
   padding-bottom: 9px;
-  font-size: 22px;
-  line-height: 26px;
   color: #333333;
+  font-size: 1.571em;
   font-family: "Crimson Text", serif;
+  line-height: 26px;
 }
 .home-intro p strong {
   color: #7b2222;
@@ -350,12 +350,12 @@ ul.nav li li a:hover, ul.nav li.selected li a:hover {
 }
 .home-widget h3 {
   padding-bottom: 14px;
-  font-size: 20px;
-  line-height: 26px;
   color: #666666;
+  font-size: 1.429em;
   font-weight: normal;
-  text-transform: uppercase;
   font-family: "Crimson Text", serif;
+  line-height: 26px;
+  text-transform: uppercase;
 }
 .home-widget .links p {
   line-height: 22px;
@@ -374,9 +374,9 @@ ul.nav li li a:hover, ul.nav li.selected li a:hover {
 .home-widget .links ul li a {
   width: 100%;
   display: block;
-  font-size: 14px;
-  line-height: 35px;
   color: #666666;
+  font-size: 1em;
+  line-height: 35px;
   text-indent: 26px;
   background: url("images/bullet.gif") no-repeat 6px 12px;
 }
@@ -415,11 +415,11 @@ ul.nav li li a:hover, ul.nav li.selected li a:hover {
   padding: 0 3.7% 0;
   margin-bottom: 5px;
   float: left;
-  border: 1px solid #dddddd;
-  font-size: 14px;
-  line-height: 22px;
   color: #666666;
+  font-size: 1em;
   font-family: Georgia, "Times New Roman", Times, serif;
+  line-height: 22px;
+  border: 1px solid #dddddd;
   background: url("images/input-text-bg.gif") repeat-x #ebebeb;
 }
 .contact .contact-form textarea {
@@ -431,11 +431,11 @@ ul.nav li li a:hover, ul.nav li.selected li a:hover {
 .contact .contact-form input[type="button"] {
   width: 100%;
   height: 38px;
-  text-indent: 10px;
+  color: #ffffff;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: bold;
   text-align: left;
-  color: #ffffff;
+  text-indent: 10px;
   border: 0;
   background: #b00000;
   background: -moz-linear-gradient(top, #b00000 0%, #7d2121 100%);
@@ -451,7 +451,7 @@ ul.nav li li a:hover, ul.nav li.selected li a:hover {
   min-height: 33px;
   padding-left: 37px;
   display: block;
-  font-size: 11px;
+  font-size: 0.786em;
   line-height: 17px;
   background: url("images/lock.gif") no-repeat;
 }
@@ -464,9 +464,9 @@ footer {
   padding: 29px 0;
   margin: 0 auto;
   text-align: center;
-  font-size: 13px;
-  line-height: 24px;
   color: #666666;
+  font-size: 0.929em;
+  line-height: 24px;
   background: url("images/footer-bg.gif") no-repeat center bottom;
 }
 footer a {
@@ -676,4 +676,4 @@ footer ul li {
   }
 }
 
-/*# sourceMappingURL=style-expanded.css.map */
+/*# sourceMappingURL=style.css.map */
