--- a/scss/base.scss
+++ b/scss/base.scss
@@ -192,12 +192,12 @@ article p:last-child, div p:last-child {
 
   h3 {
     padding-bottom: 14px;
-    color: $color-link;
-    font-size: 1.429em;
-    font-weight: normal;
-    font-family: $font-title;
+    font-size: 20px;
     line-height: 26px;
+    color: $color-link;
+    font-weight: normal;
     text-transform: uppercase;
+    font-family: $font-title;
   }
 }
 
@@ -317,11 +317,11 @@ ul.nav {
     a {
       float: left;
       padding-bottom: 15px;
-      color: $color-link;
-      font-size: 1.143em;
-      font-family: $font-title;
+      font-size: 16px;
       line-height: 19px;
+      color: $color-link;
       text-transform: uppercase;
+      font-family: $font-title;
     }
 
     a:hover, &.slct_nav a {
@@ -338,15 +338,15 @@ ul.nav {
      *************************************************************************/
     ul {
       display: none;
-      position: absolute;
-      overflow: hidden;
       width: 186px;
-      top: 23px;
-      left: -43px;
       padding: 23px 10px 11px;
       border-bottom: 1px solid $color-border;
       border-top: none;
       background: url("images/sub-nav-bg.gif") no-repeat $color-bg;
+      overflow: hidden;
+      position: absolute;
+      left: -43px;
+      top: 23px;
     }
 
     li,
@@ -365,12 +365,12 @@ ul.nav {
     &.selected li a {
       width: 100%;
       padding-bottom: 0;
-      color: $color-link;
-      font-size: 1em;
-      font-family: $font-base;
+      font-size: 14px;
       line-height: 32px;
+      color: $color-link;
       text-indent: 5px;
       text-transform: none;
+      font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
       background: none;
     }
 
@@ -408,21 +408,21 @@ ul.nav {
   h2 {
     width: 100%;
     padding-bottom: 17px;
+    font-size: 33px;
+    line-height: 36px;
     color: $color-highlight;
-    font-size: 2.357em;
+    font-family: $font-title;
     font-style: italic;
     font-weight: normal;
-    font-family: $font-title;
-    line-height: 36px;
   }
 
   p {
     width: 100%;
     padding-bottom: 9px;
-    color: $color-text-home;
-    font-size: 1.571em;
-    font-family: $font-title;
+    font-size: 22px;
     line-height: 26px;
+    color: $color-text-home;
+    font-family: $font-title;
 
     strong {
       color: $color-highlight;
@@ -441,12 +441,12 @@ ul.nav {
 
   h3 {
     padding-bottom: 14px;
-    color: $color-link;
-    font-size: 1.429em;
-    font-weight: normal;
-    font-family: $font-title;
+    font-size: 20px;
     line-height: 26px;
+    color: $color-link;
+    font-weight: normal;
     text-transform: uppercase;
+    font-family: $font-title;
   }
 
   .links {
@@ -469,9 +469,9 @@ ul.nav {
         a {
           width: 100%;
           display: block;
-          color: $color-link;
-          font-size: 1em;
+          font-size: 14px;
           line-height: 35px;
+          color: $color-link;
           text-indent: 26px;
           background: url("images/bullet.gif") no-repeat 6px 12px;
 
@@ -525,11 +525,11 @@ ul.nav {
       padding: 0 3.7% 0;
       margin-bottom: 5px;
       float: left;
-      color: $color-link;
-      font-size: 1em;
-      font-family: $font-input;
-      line-height: 22px;
       border: 1px solid $color-border;
+      font-size: 14px;
+      line-height: 22px;
+      color: $color-link;
+      font-family: $font-input;
       background: url("images/input-text-bg.gif") repeat-x $color-input-bg;
     }
 
@@ -543,11 +543,11 @@ ul.nav {
     input[type="button"] {
       width: 100%;
       height: 38px;
-      color: $color-bg;
+      text-indent: 10px;
       font-family: $font-input;
       font-weight: bold;
       text-align: left;
-      text-indent: 10px;
+      color: $color-bg;
       border: 0;
       @include gradient(#b00000, #7d2121);
     }
@@ -558,7 +558,7 @@ ul.nav {
     min-height: 33px;
     padding-left: 37px;
     display: block;
-    font-size: 0.786em;
+    font-size: 11px;
     line-height: 17px;
     background: url("images/lock.gif") no-repeat;
   }
@@ -572,9 +572,9 @@ footer {
   padding: 29px 0;
   margin: 0 auto;
   text-align: center;
-  color: $color-link;
-  font-size: 0.929em;
+  font-size: 13px;
   line-height: 24px;
+  color: $color-link;
   background: url("images/footer-bg.gif") no-repeat center bottom;
 
   a {
